tests/base/parser/bad/lmodule-import-cid-as-with.scilla
scilla_version 0

(* should be uppercase *)
import BoolUtils as boolUtils

contract Test
()
